add simple IndexServlet
- improve handling of global beans via ServletContext instead of public fields
- fix database sessions getting closed during tests

relates to #301 (index background thread, work in progress) & #305 (IndexServlet)